--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "expo-camera": "latest",
     "lucide-react-native": "latest",
     "date-fns": "latest",
-    "expo-linear-gradient": "latest"
+    "expo-linear-gradient": "latest",
+    "expo-font": "latest",
+    "react-native-svg": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
